5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1602_1570.log
== TEST (2019-03-25 18:30:05) 
-- CODE:
texto= "Estou Aprendendo Python"
print(texto.lower())
-- OUTPUT:
estou aprendendo python
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:30:09) 
-- CODE:
texto= "Estou Aprendendo Python"
print(texto.lower())
-- EXECUTION TIME:
0.267416
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:30:43) 
-- CODE:
texto= "Estou Aprendendo Python"
print("texto".lower())
-- OUTPUT:
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:31:25) 
-- CODE:
texto= "Estou Aprendendo Python"
print("ESTOU APREDENDO PYTHON".lower())
-- OUTPUT:
estou apredendo python
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:31:34) 
-- CODE:
texto= "Estou Aprendendo Python"
print("ESTOU APREDENDO PYTHON".lower())
-- EXECUTION TIME:
0.163483
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou apredendo python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:31:46) 
-- CODE:
texto= "Estou Aprendendo Python"
print("ESTOU APREDENDO PYTHON.".lower())
-- OUTPUT:
estou apredendo python.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:31:50) 
-- CODE:
texto= "Estou Aprendendo Python"
print("ESTOU APREDENDO PYTHON.".lower())
-- EXECUTION TIME:
0.150925
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou apredendo python.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:32:17) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APREDENDO PYTHON.".lower())
-- OUTPUT:
estou apredendo python.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:20) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APREDENDO PYTHON.".lower())
-- EXECUTION TIME:
0.186709
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou apredendo python.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:32:24) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APREDENDO PYTHON".lower())
-- OUTPUT:
estou apredendo python
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:32:29) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APREDENDO PYTHON".lower())
-- EXECUTION TIME:
0.143455
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou apredendo python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:33:07) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APREnDENDO PYTHON".lower())
-- OUTPUT:
estou aprendendo python
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:11) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APREnDENDO PYTHON".lower())
-- EXECUTION TIME:
0.17293
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:33:31) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APRENDENDO PYTHON".lower())
-- OUTPUT:
estou aprendendo python
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:33:33) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APRENDENDO PYTHON".lower())
-- EXECUTION TIME:
0.203372
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:34:20) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APRENDENDO PYTHON".lower())
-- OUTPUT:
estou aprendendo python
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:34:36) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APRENDENDO PYTHON".lower())
-- EXECUTION TIME:
0.154955
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:34:40) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APRENDENDO PYTHON".lower())
-- EXECUTION TIME:
0.201039
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:48:50) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APRENDENDO PYTHON".lower())
-- OUTPUT:
estou aprendendo python
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:49:00) 
-- CODE:
texto= "estou aprendendo python"
print("ESTOU APRENDENDO PYTHON".lower())
-- EXECUTION TIME:
0.138939
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:49:20) 
-- CODE:
texto="estou aprendendo python"
print("ESTOU APRENDENDO PYTHON".lower())
-- OUTPUT:
estou aprendendo python
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:49:24) 
-- CODE:
texto="estou aprendendo python"
print("ESTOU APRENDENDO PYTHON".lower())
-- EXECUTION TIME:
0.202137
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:50:30) 
-- CODE:
texto="Estou Aprendendo Python."
print("ESTOU APRENDENDO PYTHON.".lower())
-- OUTPUT:
estou aprendendo python.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:50:34) 
-- CODE:
texto="Estou Aprendendo Python."
print("ESTOU APRENDENDO PYTHON.".lower())
-- EXECUTION TIME:
0.193795
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:50:36) 
-- CODE:
texto="Estou Aprendendo Python."
print("ESTOU APRENDENDO PYTHON.".lower())
-- OUTPUT:
estou aprendendo python.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:50:40) 
-- CODE:
texto="Estou Aprendendo Python."
print("ESTOU APRENDENDO PYTHON.".lower())
-- EXECUTION TIME:
0.211466
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:52:30) 
-- CODE:
string="ESTOU APRENDENDO PYTHON."
print("ESTOU APRENDENDO PYTHON.".lower())
-- OUTPUT:
estou aprendendo python.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:52:33) 
-- CODE:
string="ESTOU APRENDENDO PYTHON."
print("ESTOU APRENDENDO PYTHON.".lower())
-- EXECUTION TIME:
0.176908
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:53:14) 
-- CODE:
string="ESTOU APRENDENDO PYTHON."
print("ESTOU APRENDENDO PYTHON.".upper())
-- OUTPUT:
ESTOU APRENDENDO PYTHON.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:53:17) 
-- CODE:
string="ESTOU APRENDENDO PYTHON."
print("ESTOU APRENDENDO PYTHON.".upper())
-- EXECUTION TIME:
0.184303
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
ESTOU APRENDENDO PYTHON.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:54:52) 
-- CODE:
string="Estou Aprendendo Python."
print("ESTOU APRENDENDO PYTHON.".lower())
-- OUTPUT:
estou aprendendo python.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:54:54) 
-- CODE:
string="Estou Aprendendo Python."
print("ESTOU APRENDENDO PYTHON.".lower())
-- EXECUTION TIME:
0.201336
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:55:12) 
-- CODE:
string="estou aprendendo python."
print("ESTOU APRENDENDO PYTHON.".lower())
-- OUTPUT:
estou aprendendo python.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:55:15) 
-- CODE:
string="estou aprendendo python."
print("ESTOU APRENDENDO PYTHON.".lower())
-- EXECUTION TIME:
0.148729
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:56:01) 
-- CODE:
string="estou aprendendo python."
print("ESTOU APRENDENDO PYTHON.".lower())
-- OUTPUT:
estou aprendendo python.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:01:41) 
-- CODE:
string=input("estou aprendendo python.")
print("ESTOU APRENDENDO PYTHON.".lower())
-- OUTPUT:
estou aprendendo python.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:01:48) 
-- CODE:
string=input("estou aprendendo python.")
print("ESTOU APRENDENDO PYTHON.".lower())
-- EXECUTION TIME:
0.122523
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
estou aprendendo python.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:02:44) 
-- CODE:
string=input("estou aprendendo python.")
print(texto.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.lower())
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:03:01) 
-- CODE:
string=input("estou aprendendo python.")
print(string.lower())
-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:03:09) 
-- CODE:
string=input("estou aprendendo python.")
print(string.lower())
-- EXECUTION TIME:
0.275802
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
primeiro_caso_de_teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
